# nba_analytics

./: .editorconfig  .env  .gitattributes  .gitignore  =25  LICENSE  Makefile  README.md  VERSION.md  app.py  bets.py  betting.db  cleanup.py  cleanup_pycharm.sh  config.py  config.toml  config.yaml  config_schema.py  daily_scheduler.py  dashboard.py  data.py  db.py  elo_visualizations.py  evaluation_plots.py  fetch_games.py  full_setup.py  generate_features.py  generate_xgb_model.py  init_db.py  load_data.py  makefile  models.py  nba.daily_pipeline  nba_games_202425.csv  nba_games_202526.csv  nba_pipeline.db  nba_team_stats_202425.csv  nba_team_stats_202526.csv  notifications.py  notify.py  (+38 more)
.github/workflows/: aggregate.yml  automation.yml  awards_tracker.yml  build.yml  ci.yml  daily-jobs.yml  daily_ci.yml  daily_pipeline.yml  fetch.yml  monthly.yml  pipeline.yml  player_tracker.yml  publish.yml  rain.yml  run_pipeline.yml  season_end.yml  tests.yml  train.yml  weekly.yml
api/: routes.py
app/: __init__.py  app.py  dashboard.py  database.py  predict_pipeline.py  prediction_pipeline.py  predictor.py  simulate_ai_bankroll.py  train_model.py
app/api/: nba_api.py  routes.py
app/dashboard/: archive_rotation.py  cleanup.py  combined.py  dashboard_runner.py  log_rotation.py
app/models/: xgboost_model.py
app/pages/: 1_Daily_Predictions.py  2_Weekly_Summary.py  3_Player_Trends.py  4_CLI_Results.py  5_Monte_Carlo_Bankroll.py  6_Player_Level_MonteCarlo.py  7_AI_Predictor.py  ai_predictions.py  backtesting.py  bankroll_sim.py  player_tracker.py  player_trends.py  results_dashboard.py  stats_overview.py  weekly_summary.py
app/scripts/: train_model.py
app/utils/: notify.py
app/visualizations/: team_visualizations.py
betting/: bankroll.py  ev_calculator.py  picks.py  utils.py
cli/: run_daily.py
config/: team_aliases.json
core/: config.py  config_loader.py  data.py  data_cache.py  db_module.py  exceptions.py  fetch_games.py  game_results_cache.py  log_config.py  odds.py  odds_cache.py  paths.py  player_stats_cache.py  subprocess_utils.py  team_performance.py  training_cache.py  utils.py
dashboard/: app.py  dashboard.py
data/: bets.db  fetch_games.py
data/canonical/: long.parquet  schedule.parquet
data/odds/: odds_2025-12-21.parquet
data_ingest/: fetch_odds.py  fetch_player_stats.py
features/: build_features.py  feature_builder.py
mlruns/0/: meta.yaml
modeling/: predict.py  simulate_games.py  train.py
models/: predict.py  train_models.py
nba_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nba_analytics_core/: __init__.py  awards.py  data.py  db_module.py  fetch_games.py  notifications.py  odds.py  player_data.py  predictor.py  simulate_ai_bankroll.py  team_performance.py  team_strength.py  utils.py
nba_core/: config.py  config_loader.py  data.py  data_cache.py  exceptions.py  fetch_games.py  log_config.py  odds.py  paths.py  team_performance.py
notifications/: __init__.py
pipelines/: daily_pipeline.py  nba_pipeline.py  strategy.py
predict/: predict.py  predict_ensemble_only.py
results/: player_trends.csv  weekly_summary.csv
scheduler/: daily_picks.py  daily_scheduler.py  run_pipeline.py
scripts/: SbrOddsProvider.py  __init__.py  aggregate_results.py  ai_tracker.py  backtest.py  betting_utils.py  build_features.py  build_features_for_new_games.py  build_features_for_training.py  build_training_data.py  build_weekly_summary.py  cleanup.py  cli.py  compare_snapshots.py  daily_dashboard.py  dashboard.py  data_sources.py  download_dataset.py  download_games.py  export_feature_stats.py  fetch_features.py  fetch_game_results.py  fetch_games_odds.py  fetch_new_games.py  fetch_player_stats.py  fetch_player_stats_parallel.py  fetch_season_data.py  fetch_team_data.py  generate_dummy_data.py  generate_picks.py  generate_sample_data.py  generate_synthetic_historical_games.py  generate_today_predictions.py  generate_weekly_snapshots.py  ingest_games.py  init_db.py  init_teamdata.py  load_data.py  load_games.py  merge_team_data.py  (+30 more)
src/: add_header.py  app.py  cli.py  config.py  config_loader.py  daily_runner.py  daily_runner_mflow.py  main.py  main_today.py  mlflow_setup.py  pipeline_runner.py  run_pipeline.py  schemas.py  test.py
src/alerts/: alert_manager.py  recommendations_alert.py  telegram.py
src/analytics/: cli.py  interpretability.py  rankings.py  rankings_cli.py  team_stability.py
streamlit_app/: dashboard.py
telegram_bot/: bot.py  send_daily_picks.py
tests/: conftest.py  e2e_schedule_test.py  run_all.py  test_add_unique_id.py  test_api.py  test_app_integration.py  test_app_with_data.py  test_backtest.py  test_backtest_engines.py  test_backtest_ml.py  test_backtest_spread.py  test_backtest_totals.py  test_betting.py  test_checks.py  test_config.py  test_config_loader.py  test_data.py  test_database_settings.py  test_engineer_features.py  test_enrichment.py  test_feature_builders.py  test_feature_engineering.py  test_features.py  test_game_features.py  test_generate_historical_schedule.py  test_generate_today_predictions.py  test_imports.py  test_ingestion.py  test_integration_pipeline_mlflow.py  test_io.py  test_loaders.py  test_logging.py  test_mapping.py  test_ml_prediction_pipeline.py  test_mlflow_setup.py  test_model_registry.py  test_nba_api_client.py  test_nba_api_wrapper.py  test_normalization.py  test_orchestrator.py  (+22 more)
train/: build_features.py  nba_pipeline.db  train_ensemble.py  train_model.py  train_model_xgb.py
utils/: betting.py  bot.py  db_init.py  db_setup.py  features.py  fetch_games.py  nba_api.py  notify.py
(+386 files in other folders)
