[project]
name = "nba-analytics"
dynamic = ["version"]
description = "NBA win prediction pipeline with MLflow and SHAP explainability"
authors = [
    { name = "Your Team", email = "team@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas~=2.2",
    "numpy~=1.26",
    "scikit-learn~=1.5",
    "scipy~=1.14",
    "matplotlib~=3.9",
    "seaborn~=0.13",
    "nba_api==1.4.1",
    "loguru~=0.7",
    "joblib~=1.4",
    "mlflow~=2.16",
    "shap~=0.46",
    "pydantic~=2.12",
    "pydantic-settings~=2.2"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "nba_analytics.__version__" }

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "black~=24.10",
    "isort~=5.13",
    "mypy~=1.11"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
