[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-analytics"
version = "0.1.0"
description = "NBA prediction and analytics pipeline"
readme = "README.md"
license = "MIT"  # SPDX license expression
authors = [{ name = "Mohamadou", email = "your.email@example.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=1.7",
    "mlflow>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "mypy", "sphinx", "black", "isort"]
docs = ["sphinx", "sphinx-rtd-theme"]
tests = ["pytest", "coverage"]
viz = ["matplotlib", "seaborn"]

[project.scripts]
nba-run = "src.pipeline_runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = ["LICENSE"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')"
]
