[metadata]
name = nba_analytics
version = 0.1.0
description = NBA prediction and analytics pipeline
long_description = file: README.md
long_description_content_type = text/markdown
author = Mohamadou
author_email = your.email@example.com
url = https://github.com/yourusername/nba_analytics
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    pandas>=2.0
    numpy>=1.24
    scikit-learn>=1.3
    xgboost>=1.7
    mlflow>=2.0
    pydantic>=2.0
    pydantic-settings>=2.0
    pyyaml>=6.0
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    pytest
    flake8
    mypy
    sphinx
docs =
    sphinx
    sphinx-rtd-theme
tests =
    pytest
    coverage

[options.entry_points]
console_scripts =
    nba-run = run_pipeline:main
