[metadata]
name = nba-analytics
version = 0.1.0
author = Your Name
description = NBA analytics, predictions, odds comparison, and betting backtest platform
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pandas
    numpy
    scikit-learn
    loguru
    requests
    streamlit
    shap
    matplotlib
    nba_api

[options.packages.find]
where = src
